# Khocomp

./: .clang-format  .cmake-format.py  .gitignore  CITATION.cff  CMakeLists.txt  NOTICE  README.md  action.cpp  algebra.cpp  algebra.h  algebra_test.cpp  chaincomplex.cpp  chaincomplex.h  full_khovanov.cpp  khovanov.cpp  khovanov.h  pdcode.cpp  pdcode.h  sparse_bool_matrix.cpp  sparse_bool_matrix.h  sparse_bool_matrix_fast_column_operations.cpp  sparse_bool_matrix_fast_column_operations.h  sparse_bool_matrix_fast_row_operations.cpp  sparse_bool_matrix_fast_row_operations.h  sparse_bool_matrix_test.cpp  sparse_bool_matrix_utils.cpp  sparse_bool_matrix_utils.h  sparse_low_memory_bool_matrix.cpp  sparse_low_memory_bool_matrix.h  symmetry.cpp  symmetry.h  test_util.h
examples/5_1/: pdcode
examples/5_2/: pdcode
examples/6_1/: pdcode
examples/6_2/: pdcode
examples/6_3/: pdcode
examples/7_4/: pdcode
examples/cable_on_figure_eight/: figure_eight_action  figure_eight_code
examples/figure_eight/: pdcode
examples/kyle/: action  code
examples/ninefortysix/: action  code
examples/stevedore/: action  pdcode
examples/trefoil/: action  code
